Changelog - Order most recent last

3:58pm - added the changelog
-Derek Larson

8:35am - added zzz method to First Controller and routed sleep to first/zzz
-Derek Larson