@@ -5,3 +5,4 @@
 !*/cache/index.html
 !*/cache/.htaccess
 /nbproject/private/
+/nbproject
