@@ -1,7 +1,15 @@
 Changelog - Order most recent last
 
+9/30/2016
+10:08 AM - Added Routing rule, leading to first/gimme/$id
+-Ivelin Ivanov
+
+9/30/2016
+9:50 AM - Added First controller
+-Ivelin Ivanov
+
 3:58pm - added the changelog
 -Derek Larson
 
-8:35am - added zzz method to First Controller and routed sleep to first/zzz
--Derek Larson
+5:10 - added Last controller
+ - Andrew Lukonin
